Display-wrap fix

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     background-image: url(imagens/fundo.png);
 
     ::selection {
-        color: rgba(0, 0, 0, 0.8);
+        color: rgba(0, 0, 0, 0.2);
         background: rgba(255, 255, 255, 0.3);
     }
 
@@ -65,7 +65,7 @@ main {
     font-weight: bolder;
     display: flex;
     flex-wrap: wrap;
-justify-content: center;
+    justify-content: center;
 }
 
 .logo {
@@ -102,8 +102,7 @@ a:hover {
 }
 
 section {
-    height: 40vh;
-    width: 40vw;
+    width: 25em;
     color: rgba(255, 255, 255, 0.8);
     border-radius: 20px;
     padding: 0.1rem;
